sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:11: error: not found: value nbPos
      for (k <- 0 to nbPos-1)
                     ^